# NeuroKit

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: __init__.py  activations.py  layers.py  loss.py  network.py  optimizers.py
models/: mnist_cnn_model.pkl
neurokit/: __init__.py  activations.py  context.py  function.py  loss.py  nn.py  ops.py  optim.py  tensor.py  utils.py
neurokit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neurokit/core/: data_generator.py  utils.py
notebook/: mnist_notebook.ipynb  xor_notebook.ipynb
test/: test_activations.py
