[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokit"
version = "0.1.0"
description = "A lightweight neural network library."
authors = [{name = "Vo Hong Quan"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurokit*"]